--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "imagemin-mozjpeg": "^6.0.0",
     "imagemin-pngquant": "^5.0.0",
     "jade": "~1.6.0",
+    "jszip": "^3.0.0",
     "morgan": "~1.3.0",
     "request": "^2.73.0",
     "serve-favicon": "~2.1.3",
