--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "email": ""
   },
   "dependencies": {
+    "archiver": "^1.0.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
@@ -21,7 +22,6 @@
     "imagemin-mozjpeg": "^6.0.0",
     "imagemin-pngquant": "^5.0.0",
     "jade": "~1.6.0",
-    "jszip": "^3.0.0",
     "morgan": "~1.3.0",
     "request": "^2.73.0",
     "serve-favicon": "~2.1.3",
