--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "express-app1",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "webpack --progress --colors --watch"
+    "watch": "webpack --progress --colors --watch",
+    "build": "export NODE_ENV=production && webpack --progress --colors"
   },
   "description": "ExpressApp1",
   "author": {
