--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "events": "*",
     "express": "~4.9.0",
     "imagemin": "^5.2.2",
-    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.0",
     "jade": "~1.6.0",
     "morgan": "~1.3.0",
